<resources>
    <string name="app_name">RestaurantApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_loginBypass">Login Bypass</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to master menu list -->
    <string name="title_menuitem_list">MenuItems</string>
    <string name="title_menuitem_detail">MenuItem Detail</string>

    <!-- Strings related to master restaurant list -->
    <string name="title_restaurantitem_list">Restaurants near you</string>
    <string name="title_restaurantitem_detail">Restaurant menu</string>
    <string name="title_restaurant_list">Restaurants</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
</resources>
